增加个人中心，关于app等

--- a/app/src/main/res/layout/activity_common_number.xml
+++ b/app/src/main/res/layout/activity_common_number.xml
@@ -23,7 +23,8 @@
     <ExpandableListView
         android:id="@+id/elv"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        style="@style/ExpandableListView.NoDivider"/>
 
     <com.zurich.mobile.widget.HintView
         android:id="@+id/hint_common_number_hint"
