--- a/app/src/main/res/layout/activity_atools.xml
+++ b/app/src/main/res/layout/activity_atools.xml
@@ -21,7 +21,7 @@
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
     </android.support.design.widget.AppBarLayout>
 
-    <TextView
+    <com.rey.material.widget.Button
         android:layout_width="fill_parent"
         android:layout_height="60dp"
         android:background="@drawable/ripple_button_bg"
@@ -35,7 +35,7 @@
         android:textColor="#000000"
         android:textSize="18sp" />
 
-    <TextView
+    <com.rey.material.widget.Button
         android:layout_width="fill_parent"
         android:layout_height="60dp"
         android:background="@drawable/ripple_button_bg"
@@ -49,7 +49,7 @@
         android:textColor="#000000"
         android:textSize="18sp" />
 
-    <TextView
+    <com.rey.material.widget.Button
         android:layout_width="fill_parent"
         android:layout_height="60dp"
         android:background="@drawable/ripple_button_bg"
