--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="false"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -45,7 +44,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="@drawable/ripple_button_bg"
+            android:background="@null"
             android:button="@null"
             android:gravity="center"
             android:paddingBottom="4dp"
@@ -59,8 +58,8 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="@drawable/ripple_button_bg"
             android:button="@null"
+            style="@style/common_button_ripple"
             android:gravity="center"
             android:paddingBottom="4dp"
             android:paddingTop="7dp"
