增加妹纸图片预览分享及保存

--- a/app/src/main/res/layout/activity_fuli.xml
+++ b/app/src/main/res/layout/activity_fuli.xml
@@ -27,4 +27,10 @@
         android:layout_below="@id/app_bar_fuli"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <com.zurich.mobile.widget.HintView
+        android:id="@+id/hint_fuli_hint"
+        android:layout_below="@id/app_bar_fuli"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </RelativeLayout>
