1.增加关于我页面跳转浏览器2.网络请求优化，增加注释3.常用号码查询UI优化

--- a/app/src/main/res/layout/activity_about_me.xml
+++ b/app/src/main/res/layout/activity_about_me.xml
@@ -45,6 +45,7 @@
             android:textSize="20sp" />
 
         <TextView
+            android:id="@+id/tv_about_me_weibo"
             android:text="weibo：http://weibo.com/zurich37"
             android:layout_margin="12dp"
             android:padding="8dp"
@@ -53,6 +54,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/tv_about_me_github"
             android:text="GitHub：https://github.com/zurich37"
             android:layout_margin="12dp"
             android:padding="8dp"
