--- a/app/src/main/res/layout/activity_common_number.xml
+++ b/app/src/main/res/layout/activity_common_number.xml
@@ -23,8 +23,7 @@
     <ExpandableListView
         android:id="@+id/elv"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        style="@style/ExpandableListView.NoDivider"/>
+        android:layout_height="fill_parent"/>
 
     <com.zurich.mobile.widget.HintView
         android:id="@+id/hint_common_number_hint"
